--- a/kmlmaps/index.html
+++ b/kmlmaps/index.html
@@ -32,8 +32,7 @@ function initMap() {
 }
 
     </script>
-    <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCirQVWeLi8N5pqqAGJpCMFWjP_n4UpqNU&signed_in=false&callback=initMap">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCirQVWeLi8N5pqqAGJpCMFWjP_n4UpqNU&libraries=places&v=3.17"
+  type="text/javascript"></script>
   </body>
 </html>
