--- a/kmlmaps/index.html
+++ b/kmlmaps/index.html
@@ -17,7 +17,6 @@
   </head>
   <body>
     <div id="map"></div>
-    
     <script>
 
 function initMap() {
@@ -33,7 +32,8 @@ function initMap() {
 }
 
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCirQVWeLi8N5pqqAGJpCMFWjP_n4UpqNU&libraries=places&v=3.17"
-  type="text/javascript"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCirQVWeLi8N5pqqAGJpCMFWjP_n4UpqNU&signed_in=false&callback=initMap">
+    </script>
   </body>
 </html>
