--- a/kmlmaps/index.html
+++ b/kmlmaps/index.html
@@ -26,7 +26,7 @@ function initMap() {
   });
 
   var ctaLayer = new google.maps.KmlLayer({
-    url: 'kml/msmonsparcelas.kml',
+    url: 'kml/cta.kml',
     map: map
   });
 }
