--- a/kmlmaps/index.html
+++ b/kmlmaps/index.html
@@ -22,11 +22,11 @@
 function initMap() {
   var map = new google.maps.Map(document.getElementById('map'), {
     zoom: 11,
-    center: {lat: -34.62, lng: -58.45}
+    center: {lat: 41.876, lng: -87.624}
   });
 
   var ctaLayer = new google.maps.KmlLayer({
-    url: 'https://nicolasadrian.github.io/kmlmaps/kml/cta.kml',
+    url: 'http://nicolasadrian.github.io/kmlmaps/kml/cta.kml',
     map: map
   });
 }
