--- a/kmlmaps/examples/kml.html
+++ b/kmlmaps/examples/kml.html
@@ -12,7 +12,7 @@
 var map = new L.Map('map', {center: new L.LatLng(58.4, 43.0), zoom: 11});
 var osm = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
 
-var track = new L.KML("KML_Samples.kml", {async: true});
+var track = new L.KML("http://nicolasadrian.github.io/kmlmaps/kml/msmonsparcelas.kml", {async: true});
 track.on("loaded", function(e) { map.fitBounds(e.target.getBounds()); });
 
 map.addLayer(track);
