--- a/sedeutn/index.html
+++ b/sedeutn/index.html
@@ -78,8 +78,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Sede Posgrado UTN</div>
-                <div class="intro-heading">Buenos Aires | Argentina </div>
+            
+                <div class="intro-heading">Sede Posgrado UTN</div>
+                <div class="intro-lead-in">Buenos Aires | Argentina</div>
+
                 <a href="#services" class="page-scroll btn btn-xl"> Ver Proyecto </a> <!--Tell me more -->
             </div>
         </div>
