--- a/sedeutn/index.html
+++ b/sedeutn/index.html
@@ -79,7 +79,7 @@
         <div class="container">
             <div class="intro-text">
             
-            <!--    <div class="intro-heading">Sede Posgrado UTN</div>-->
+            <div class="intro-heading">Sede Posgrado UTN</div>
                 <div class="intro-lead-in">Sede Posgrado UTN</div>
 
                 <a href="#services" class="page-scroll btn btn-xl"> Ver Proyecto </a> <!--Tell me more -->
