--- a/sedeutn/index.html
+++ b/sedeutn/index.html
@@ -56,16 +56,13 @@
                         <a class="page-scroll" href="#services">Proyecto</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Fotos</a>
+                        <a class="page-scroll" href="#portfolio">Documentacion</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Documentacion</a>
+                        <a class="page-scroll" href="#about">Detalles</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Sobre Mi</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -130,7 +127,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Fotos</h2>
+                    <h2 class="section-heading">Documentacion</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
@@ -177,17 +174,7 @@
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/golden.png" class="img-responsive" alt="">
-                    </a>
-                    
-                </div>
+                
             </div>
         </div>
     </section>
@@ -197,7 +184,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Documentacion</h2>
+                    <h2 class="section-heading">Detalles del Proyecto</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
