--- a/sedeutn/index.html
+++ b/sedeutn/index.html
@@ -324,7 +324,7 @@
         </div>
     </section>
 
-    <!-- Clients Aside -->
+    <!-- Clients Aside 
     <aside class="clients">
         <div class="container">
             <div class="row">
@@ -351,7 +351,7 @@
             </div>
         </div>
     </aside>
-
+-->
   
 
     <footer>
