--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
 
   <title>Estamos construyendo para usted</title>
-  <meta name="description" content="FCC's tribute project.">
+  <meta name="description" content="Nicolas Perez - Gueb">
 
   <link rel="stylesheet" type="text/css" href="construccion/css/style.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
