--- a/ciudad3d/index.html
+++ b/ciudad3d/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
   <head>
@@ -78,7 +78,7 @@
         <div class="container">
           
 			<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="seccion_001.html"></iframe>
+  <iframe class="embed-responsive-item" src="http://mdu01-webpdi.spdgiur.gcba.gov.ar/wfs/webfiles/cesium/Apps/Sandcastle/gallery/incidencia_uva_3d.html"></iframe>
 </div>
 
  
