--- a/pu_mapas/comuna4.html
+++ b/pu_mapas/comuna4.html
@@ -17,7 +17,7 @@
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoibmljb2xhc2FkcmlhYW4iLCJhIjoiY2tiZGRybG5wMGF3ZjJyb2k5ZmRwNDh1eSJ9.jBSna0avs6It_0nyrAOuSA';
 var map = new mapboxgl.Map({
-    style: 'Monochrome',
+    style: 'mapbox://styles/nicolasadriaan/ckbdfbt9q0tz51jmlihtzvv4e',
     center: [-3.705804, 40.419951],
     zoom: 15,
     pitch: 45,
