--- a/pu_mapas/index.html
+++ b/pu_mapas/index.html
@@ -141,19 +141,19 @@
 			});
 			
 			// add source and layer for museums
-			map.addSource('DistritosEconomicos', {
+			map.addSource('Distritos-Economicos', {
 				type: 'vector',
 				url: 'mapbox://styles/nicolasadriaan/ckbn5ktt31iuf1iqrz9qb570n'
 			});
 			map.addLayer({
-				'id': 'DistritosEconomicos',
+				'id': 'Distritos-Economicos',
 				'type': 'fill',
-				'source': 'DistritosEconomicos',
+				'source': 'Distritos-Economicos',
 				'layout': {
 					// make layer visible by default
 					'visibility': 'visible'
 				},
-				'source-layer': 'DistritosEconomicos'
+				'source-layer': 'Distritos-Economicos'
 			});
 			
 			
@@ -239,6 +239,55 @@
 				'source-layer': 'Asentamientos',
 			});
 			
+			// add source and layer for contours
+			map.addSource('Conjuntos-Habitacionales', {
+				type: 'vector',
+				url: 'mapbox://styles/nicolasadriaan/ckbn5ktt31iuf1iqrz9qb570n'
+			});
+			map.addLayer({
+				'id': 'Conjuntos-Habitacionales',
+				'type': 'line',
+				'source': 'Conjuntos-Habitacionales',
+				'layout': {
+					// make layer visible by default
+					'visibility': 'visible',
+				},
+				'source-layer': 'Conjuntos-Habitacionales',
+			});
+			
+			
+			// add source and layer for contours
+			map.addSource('Poligonos-Industriales', {
+				type: 'vector',
+				url: 'mapbox://styles/nicolasadriaan/ckbn5ktt31iuf1iqrz9qb570n'
+			});
+			map.addLayer({
+				'id': 'Poligonos-Industriales',
+				'type': 'line',
+				'source': 'Poligonos-Industriales',
+				'layout': {
+					// make layer visible by default
+					'visibility': 'visible',
+				},
+				'source-layer': 'Poligonos-Industriales',
+			});
+				
+			// add source and layer for contours
+			map.addSource('Hospitales', {
+				type: 'vector',
+				url: 'mapbox://styles/nicolasadriaan/ckbn4w1oy21sj1irufi53g7ng'
+			});
+			map.addLayer({
+				'id': 'Hospitales',
+				'type': 'line',
+				'source': 'Hospitales',
+				'layout': {
+					// make layer visible by default
+					'visibility': 'visible',
+				},
+				'source-layer': 'Hospitales',
+			});
+			
 			
 			
 			
@@ -254,7 +303,7 @@
 	<script>
 
 		// enumerate ids of the layers
-		var toggleableLayerIds = ['Ciclovias', 'Arbolado', 'Cuencas', 'Arroyos', 'DistritosEconomicos', 'Cotas-Nivel', 'Riesgo-Hidrico', 'Asentamientos'];
+		var toggleableLayerIds = ['Ciclovias', 'Arbolado', 'Cuencas', 'Arroyos', 'Distritos-Economicos', 'Cotas-Nivel', 'Riesgo-Hidrico', 'Conjuntos-Habitacionales', 'Asentamientos', 'Poligonos-Industriales', 'Hospitales'];
 
 	// set up the corresponding toggle button for each layer
 	for (var i = 0; i < toggleableLayerIds.length; i++) {
