--- a/pu_mapas/index.html
+++ b/pu_mapas/index.html
@@ -80,10 +80,10 @@
 		  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 			<ul class="navbar-nav mr-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="http://pugiglio.blogspot.com/" target="_blank">Blog <span class="sr-only">(current)</span></a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link" href="#">Campus FADU</a>
+				<a class="nav-link" href="http://campus.fadu.uba.ar/" target="_blank">Campus FADU</a>
 			  </li>
 			  
 			</ul>
