--- a/pu_mapas/index.html
+++ b/pu_mapas/index.html
@@ -20,6 +20,16 @@
 
 		<!-- Custom styles for this template -->
 		<link href="https://v4-alpha.getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
+		  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-81371574-10"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-81371574-10');
+</script>
+		  
 	  </head>
 	  <style>
 		body { margin: 0; padding: 0; }
