--- a/pu_mapas/index_uai.html
+++ b/pu_mapas/index_uai.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="../../favicon.ico">
 
-		<title>Planificacion Urbana Catedra Giglio - FADU UBA</title>
+		<title>Planeamiento Territorial y Urbano I - UAI</title>
 		<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
 
 		<!-- Bootstrap core CSS -->
